--- a/app/src/main/res/layout/activity_host.xml
+++ b/app/src/main/res/layout/activity_host.xml
@@ -46,6 +46,7 @@
         android:text="@string/loading" />
 
     <Button
+        android:id="@+id/start_host"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
