--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -34,4 +34,15 @@
         android:textAlignment="center"
         android:textSize="40sp"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start timer"
+        android:onClick="startTimer"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Stop timer"
+        android:onClick="stopTimer"/>
+
 </LinearLayout>
