Added bomb max time and shit

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -38,11 +38,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start timer"
-        android:onClick="startTimer"/>
+        android:onClick="onStartTimer"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Stop timer"
-        android:onClick="stopTimer"/>
+        android:onClick="onStopTimer"/>
 
 </LinearLayout>
